config/networkpolicy/ceph-csi-operator/csi-addons-controller-manager-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: csi-addons-controller-manager
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app: csi-addons-controller-manager
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 8443
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
  - to:
    - ipBlock:
        cidr: 172.30.0.1/32
    ports:
    - protocol: TCP
      port: 443
  - to:
    - ipBlock:
        cidr: 10.241.0.0/16
    ports:
    - protocol: TCP
      port: 6443
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
      podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - openshift-storage.rbd.csi.ceph.com-ctrlplugin
          - openshift-storage.cephfs.csi.ceph.com-ctrlplugin
    ports:
    - protocol: TCP
      port: 9070
    - protocol: TCP
      port: 9080
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
      podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - openshift-storage.rbd.csi.ceph.com-nodeplugin-csi-addons
          - openshift-storage.cephfs.csi.ceph.com-nodeplugin-csi-addons
    ports:
    - protocol: TCP
      port: 9071
